# Nhom3_OOP

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.txt  build.sh
docs/: Doxyfile.in  README.md
docs/development/: architecture.md  build.md  code-style.md
examples/: README.md  basic_game.cpp
src/: main.cpp
src/core/: Board.h  Game.h  Player.h
src/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/ui/: ConsoleUI.h
tests/: CMakeLists.txt  example_test.cpp
